Refactoring, enable citations and other references

--- a/templates/template.html
+++ b/templates/template.html
@@ -158,6 +158,12 @@
     td {
       padding: 0.125em 0.5em 0.25em 0.5em;
     }
+    figure {
+      text-align: center;
+    }
+    figcaption {
+      font-style: italic;
+    }
     header {
       margin-bottom: 4em;
       text-align: center;
