Improve styling of requirements

--- a/templates/template.html
+++ b/templates/template.html
@@ -52,37 +52,40 @@
       height: auto;
       max-width: 100%;
     }
-    h1, h2, h3, h4 {
-      margin-top: 1.4em;
-    }
     h1, h2 {
       font-family: "Aptos Display", sans-serif;
-      margin: 1.4em 0 0.5em;
-    }
-    h1 {
-      color: #595959;
-      font-weight: normal;
+      margin: 0;
     }
     h2, h3, h4 {
       color: #0F4761;
       font-weight: normal;
+      margin: 0;
+      margin-bottom: 1em;
+    }
+    h1 {
+      font-size: 24pt;
+      color: #595959;
+      font-weight: normal;
+      margin-top: 1em;
     }
     h2 {
-      font-size: 20pt;
-      border-bottom: 1px dotted #0F4761;
+      font-size: 22pt;
+      border-bottom: 1px solid #0F4761;
+      margin-top: 2em;
     }
     h3 {
-      font-size: 16pt;
-      margin: 0.75em 0 0.5em;
+      font-size: 18pt;
+      margin-top: 1.5em;
+      border-bottom: 1px dotted #0F4761;
     }
     h4 {
-      font-size: 14pt;
-      margin: 0.5em 0;
+      font-size: 16pt;
+      margin: 1.25em 0 0.5em;
     }
     h5 {
       font-size: 13pt;
       font-weight: bold;
-      margin: 0.25em 0;
+      margin: 1em 0 0.5em;
     }
     h6 {
       font-size: 12pt;
@@ -126,9 +129,10 @@
     }
     hr {
       border: none;
-      border-top: 1px solid #1a1a1a;
+      border-top: 3px dotted #ccc;
       height: 1px;
-      margin: 1em 0;
+      margin: 1.5rem auto;
+      width: 100px;
     }
     table {
       margin: 1em 0;
