underline goal/threshold requirement headers

--- a/templates/template.html
+++ b/templates/template.html
@@ -72,6 +72,7 @@
     h5 {
       font-size: 13pt;
       font-weight: bold;
+      text-decoration: underline;
       margin: 1em 0 0.5em;
     }
     h6 {
