--- a/templates/template.html
+++ b/templates/template.html
@@ -7,15 +7,21 @@
   <title>$if(title-prefix)$$title-prefix$ – $endif$$pagetitle$</title>
   <style>
     body {
-      margin: 0 auto;
-      max-width: 44em;
-      padding: 1em;
+      margin: 0;
+      padding: 0;
       hyphens: auto;
       overflow-wrap: break-word;
       text-rendering: optimizeLegibility;
       font-kerning: normal;
       font-size: 12pt;
       font-family: Aptos, sans-serif;
+    }
+    @media screen {
+      body {
+        max-width: 44em;
+        margin: 0 auto;
+        padding: 1em;
+      }
     }
     @media (max-width: 600px) {
       body {
